--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,9 +1,13 @@
 <div class="dashboard-boss-container">
 
   <div class="dashboard-presentation-container">
-    <p>192 T</p>
+    <div style="display: flex;align-items: flex-end;">
+      <p>26</p>
+      <img src="https://res.cloudinary.com/tark-industries/image/upload/v1553192647/Arbre.png" style="height: 45px;"></p>
+    </div>
+
     <img class="avatar-dash" src="https://res.cloudinary.com/tark-industries/image/upload/v1553179848/default_avatar.png">
-    <p>John Smith</p>
+    <p>Linda</p>
 
     <div class="categories-block">
 
@@ -43,15 +47,15 @@
         <%= image_tag("design-dashboard.png", class: 'thermomether-image') %>
         <div class="dashboard-stat info-emission">
           <div class="thermomether-straight"></div>
-          <p>1,3t de C02 émis</p>
+          <p>520 kg de C02 émis</p>
         </div>
         <div class="dashboard-stat info-compensation">
           <div class="thermomether-straight"></div>
-          <p>0,9t de C02 compensé</p>
+          <p>520 kg de C02 compensé</p>
         </div>
         <div class="dashboard-stat info-km-parcourus">
           <div class="thermomether-straight"></div>
-          <p>18652km parcourus</p>
+          <p>2260km parcourus</p>
         </div>
         
       </div>
