--- a/app/views/pages/compensation.html.erb
+++ b/app/views/pages/compensation.html.erb
@@ -30,6 +30,13 @@
 	  <%= hidden_field_tag 'dette_eco'%>
 	  <%= hidden_field_tag 'skytreep_participation'%>
 
-	  <button type="submit" id="verser-uniquement"style="background-color: #36ACB8;"></button>
+	  
+	  <div class="compensation-continuer-research-div" >
+          <button type="submit" style="background-color: #36ACB8;">
+	  		Continuer vers votre dashboard
+	  	  </button>
+          <i class="fas fa-arrow-right"></i>
+          <p id="verser-uniquement"></p>
+       </div>
 	<% end %>
 </div>
