--- a/app/assets/stylesheets/components/_compensation.scss
+++ b/app/assets/stylesheets/components/_compensation.scss
@@ -9,14 +9,14 @@
 
 .compensation__stats__container {
     background-color: #FBFAEB;
-    width: 800px;
+    width: 850px;
     height: 350px;
 	border-radius: 3px;
 	margin: 30px;
 	display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-top: 10px;
+    margin-top: 50px;
 }
 
 
@@ -121,7 +121,7 @@
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  height: 800px;
+  height: 1100px;
 
   h3 {
     text-align: center;
@@ -141,15 +141,15 @@
 
 .position__upper {
     position: absolute;
-    right: -17px;
-    bottom: 29px;
+    right: -90px;
+    bottom: -4px;
     font-size: 16px;
 }
 
 .position__lower {
     position: absolute;
-    left: -17px;
-    bottom: 29px;
+    left: -52px;
+    bottom: -2px;
     font-size: 16px;
 }
 
@@ -170,7 +170,7 @@
     border: 3px solid;
     width: 18%;
     height: 20px;
-    top: 35px;
+    top: 56px;
     left: 5px;
     border-bottom: none;
 
@@ -184,7 +184,7 @@
     border: 3px solid;
     width: 75%;
     height: 20px;
-    top: 35px;
+    top: 56px;
     right: 4px;
     border-bottom: none;
 
@@ -222,7 +222,7 @@
 }
 
 #stripe-trigger-payment {
-    width: 80%;
+    width: 100%;
 
     &:hover {
         background-color: #2DE1B4;
@@ -234,19 +234,20 @@
 }
 
 .modal-like-frame {
-    height: 275px;
+    height: 650px;
     background-color: rgba(4, 4, 9, 0.7);
 
     h4 {      
         font-family: Alegreya Sans SC;
+        font-style: normal;
+        font-weight: bold;
         color: white;
-        margin: 0px;
-        height: 75px;
         display: flex;
         justify-content: center;
         align-items: flex-end;
         font-size: 26px;
-        margin-bottom: 10px;
+        margin: 0px;
+        margin-bottom: 20px;
     }
 }
 
@@ -258,9 +259,9 @@
     align-items: center;
 
     h4 {
-        font-family: Alegreya Sans SC;
         color: white;
         margin: 0px;
+        font-family: Alegreya Sans SC;
     }
 }
 
@@ -268,20 +269,77 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    height: 200px;
-    width: 80%;
+    width: 90%;
     margin: auto;
 
     button {
-        border-radius: 4px;
+        border-radius: 2px 2px 4px 4px;
         height: 77px;
-        width: 280px;
+        width: 100%;
         color: white;
         border: none;
+        font-size: 23px;
+        font-family: Alegreya Sans SC;
+        font-weight: bold;
 
         &:hover {
             filter: brightness(107%);
         }
+    }
+}
+
+.compensation-continuer-research-div {
+
+    background: white;
+    width: 330px;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    border-radius: 4px;
+    align-items: center;
+    justify-content: space-between;
+
+    i {
+        color: #57ad57;
+        font-size: 47px;
+        font-weight: 600;
+        margin: 25px 0px;
+    }
+
+
+    p {
+        background-color: #255156;
+        color: white;
+        font-size: 17px;
+        padding: 15px;
+        box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.35);
+        border-radius: 4px;
+        text-align: center;
+        font-family: carme;
+        font-weight: 400px;
+        margin: 0px 7px 15px 7px;
+    }
+
+    img {
+        height: 115px;
+        margin-bottom: 15px;
+    }
+
+    button {
+        background-color: #255156;
+    }
+
+    #verser-uniquement {
+        background-color: #36ACB8;
+    }
+}
+
+.compensation-regler-dette-eco-div {
+
+    height: 340px;
+
+    p {
+        background-color: #0ADEA9;
     }
 }
 
@@ -315,7 +373,16 @@
        font-size: 16px;
        color: black;
        bottom: 5px;
+       right: 2px;
     }
 
 }
 
+.modal-like-frame-title {
+    padding-top: 95px;
+    padding-bottom: 50px;
+
+    h4 {
+        font-size: 30px;
+    }
+}
