--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -9,3 +9,95 @@
 	  margin: 10px;
 	}
 }
+
+.submit-button {
+	background-color: #00C896;
+	border: none;
+	border-radius: 3px;
+	padding: 10px 40px;
+	color: white;
+}
+
+.formulaire-participation {
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 400px;
+    font-size: 17px;
+
+    div {
+    	display: flex;
+    	flex-direction: column;
+    	align-items: center;
+    	margin-bottom: 15px;
+    	width: 350px;
+    	margin-top: 20px;
+    }
+
+    input {
+    	border-radius: 3px;
+    	padding: 5px;
+    	border: solid 1px #e5e5e5;
+    	margin-top: 15px;
+    	width: 100%;
+    	font-size: 15px;
+    }
+
+    textarea {
+    	border-radius: 3px;
+    	padding: 5px;
+    	border: solid 1px #e5e5e5;
+    	margin-top: 20px;
+    	width: 100%;
+    	height: 130px;
+    	font-size: 15px;
+    }
+}
+
+.modal-formulaire-title {
+	p {
+		position: relative;
+		margin-bottom: 15px;
+		padding: 15px;
+		text-align: center;
+		line-height: 18px;
+		color: white;
+		background-color: #255156;
+	}
+}
+
+.cross-closing-modal {
+	position: absolute;
+	right: 19px;
+	cursor: pointer;
+	z-index: 10;
+}
+
+.text-for-mail {
+	
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
