--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -78,21 +78,40 @@ li a {
   }
 }
 
-.beta-icon {
-  font-size: 22px;
-  font-family: Alegreya Sans SC;
-  letter-spacing: 2px;
-  font-weight: bold;
+.beta-call-icons {
+  
+  display: flex;
   position: absolute;
-  background: linear-gradient(241.27deg, #D2D300 2.73%, #F3F400 100%);
-  border-radius: 2px;
-  height: 40px;
-  width: 90px;
-  line-height: 40px;
-  text-align: center;
-  bottom: -29px;
-  right: 83px;
+  bottom: -41px;
+  right: -155px;
   z-index: 10;
+  background-color: transparent;
+
+  p {
+    font-size: 22px;
+    font-family: Alegreya Sans SC;
+    letter-spacing: 2px;
+    font-weight: bold;
+    border-radius: 2px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+  }
+  
+  .beta-icon {
+    background: linear-gradient(241.27deg, #D2D300 2.73%, #F3F400 100%);
+    margin-right: 7px;
+    width: 90px;
+  }
+  
+  .call-icon {
+    width: 170px;
+    margin-left: 7px;
+    background: linear-gradient(226.97deg, #D30000 2.73%, #D21436 100%);
+    color: white;
+    cursor: pointer;
+  }
+  
 }
 
 .logo-navbar-component {
