--- a/app/assets/stylesheets/pages/_dashboard-real.scss
+++ b/app/assets/stylesheets/pages/_dashboard-real.scss
@@ -6,11 +6,11 @@
 .category-container {
   border: 1px #D4D3D3;
   border-style: solid none;
-  height: 40px;
+  height: 60px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  font-size: 17px;
+  font-size: 18px;
 
   &:hover {
   background-color: rgba(0, 200, 150, 0.1);
@@ -29,13 +29,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 315px;
+  width: 330px;
 }
 
 .dashboard-boss-container{
   min-height:100vh;
   margin-left: 40px;
-  margin-top: 40px;
+  margin-top: 100px;
   display: flex;
 }
 
@@ -47,6 +47,7 @@
 
 .avatar-dash {
   width: 120px;
+  margin: 7px 0px;
 }
 
 .onglet-item {
@@ -55,6 +56,7 @@
 
 .dashboard-mes-infos-container {
   width: 600px;
+  margin-left: 150px;
 }
 
 .dashboard-part-title {
@@ -108,6 +110,7 @@
 .dashboard-account-line {
   display: flex;
   justify-content: space-between;
+  margin: 15px;
 }
 
 
