--- a/app/javascript/components/compensation-slider.css
+++ b/app/javascript/components/compensation-slider.css
@@ -15,7 +15,7 @@
     position: absolute;
     top: -26px;
     left: -22px;
-    background-color: #fbfaeb;
+    background-color: transparent;
     color: black;
     content: attr(data-value);
     font-size: 16px;
