Fixing home page design and sliders

--- a/app/assets/stylesheets/components/_home-tooltips.scss
+++ b/app/assets/stylesheets/components/_home-tooltips.scss
@@ -1,7 +1,7 @@
 .co2-tooltip-control {
 
 	position: absolute;
-    right: -220px;
+    right: -130px;
 
 	.tooltip-inner {
 		background-color: white;
@@ -30,7 +30,7 @@
 .arbres-tooltip-control {
 
 	position: absolute;
-    right: -220px;
+    right: -130px;
 
 	.tooltip-inner {
 		background-color: white;
@@ -58,7 +58,8 @@
 .home-compensation-tooltip-control {
 
 	position: absolute;
-    right: -220px;
+    right: -130px;
+    top: 5px;
 
 	.tooltip-inner {
 		background-color: white;
@@ -86,8 +87,8 @@
 .final-tooltip-control {
 
 	position: absolute;
-  margin-right: -24vw;
-  right: 0px;
+  	margin-right: -290px;
+  	right: 0px;
 
 
 	.tooltip-inner {
