--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
     <%= render 'shared/home-background' %>
     <div class="home-example-title-container">
       <img style="height: 110px; margin-top: -50px" src="https://res.cloudinary.com/tark-industries/image/upload/v1556618787/LOGO_SKYTREE_P_noir.png">
-      <h4 style="font-size: 22px;">Comment ça marche ?</h3>
+      <h4>Comment ça marche ?</h3>
     </div>
     <div class="home-example-etape-container">
       <div class="home-example-etape-title">
@@ -97,15 +97,15 @@
       </div>
 
       <div class="home-example-section-container" style="margin-top: 45px;">
-        <p class="slider-title-text" style="bottom:-5px;">Compensation:</p>
-        <div id="home-slider-target-compensation" style="width:650px;height:12px;"></div>
+        <p class="slider-title-text">Compensation :</p>
+        <div id="home-slider-target-compensation" style="width:750px;margin-top:35px;height:18px;margin-bottom:20px; border-radius: 30px;"></div>
         <%=render 'shared/tooltips/tooltip-compensation' %>
       </div>
     </div>
     <div class="home-example-etape-container">
       <div class="home-example-etape-title last-etape">
         <p class="etape-number">4</p>
-        <p class="etape-text last-etape-text">Dernière étape,<br>vous pouvez faire un don à l'une de nos associations partenaires afin de compenser le reste des émissions de co2 de votre trajet.</p>
+        <p class="etape-text">Dernière étape,<br>vous pouvez faire un don à l'une de nos associations partenaires afin de compenser le reste des émissions de co2 de votre trajet.</p>
         <%=render 'shared/tooltips/tooltip-final-home' %>
       </div>
     </div>
