--- a/app/views/shared/tooltips/_tooltip-arbres.html.erb
+++ b/app/views/shared/tooltips/_tooltip-arbres.html.erb
@@ -1,5 +1,5 @@
 <div class="arbres-tooltip-control">
-	<p class="checkout__button white-tooltip" id="arbres-tooltip" style="margin-right: 4vw;" data-toggle="tooltip" data-html="true"  data-placement="top" title='
+	<p class="checkout__button white-tooltip" id="arbres-tooltip" data-toggle="tooltip" data-html="true"  data-placement="top" title='
 		<div>
 			<div class="home-tooltip-middle-text"><p>1 arbre = 20kg de Co2 retiré de l’atmosphère.</p></div>
 			<p>20kg représente ce qu’un arbre nouvellement planté retire de l’atmosphère en 12 mois.</p>
