all links under https now

--- a/app/views/pages/lesarbres.html.erb
+++ b/app/views/pages/lesarbres.html.erb
@@ -37,7 +37,7 @@
     </ul>
 
       <div class="logo">
-        <a href="http://www.skytreep.fr">
+        <a href="https://www.skytreep.fr">
           <img src="https://res.cloudinary.com/tark-industries/image/upload/v1556623705/LOGO_SKYTREE_P_blanc.png">
         </a>
       </div>
