--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,7 +3,7 @@
   <div class="rectangle-navbar navbar-component-container">
 
     <div class="logo-navbar-component">
-        <a href="http://www.skytreep.fr">
+        <a href="https://www.skytreep.fr">
           <img src="https://res.cloudinary.com/tark-industries/image/upload/v1556623705/LOGO_SKYTREE_P_blanc.png">
         </a>
     </div>
