--- a/app/views/pages/noscalculs.html.erb
+++ b/app/views/pages/noscalculs.html.erb
@@ -50,7 +50,7 @@
   </ul>
 
   <div class="logo">
-    <a href="http://www.skytreep.fr">
+    <a href="https://www.skytreep.fr">
       <img src="https://res.cloudinary.com/tark-industries/image/upload/v1556618176/LOGO_SKYTREE_P_blanc.png">
     </a>
   </div>
