--- a/app/assets/stylesheets/components/_base-searchbar.scss
+++ b/app/assets/stylesheets/components/_base-searchbar.scss
@@ -21,6 +21,20 @@
 	align-items: center;
 	justify-content: center;
   border-radius: 3px;
+  position: relative;
+}
+
+.search__error__message {
+  position: absolute;
+  bottom: -50px;
+  width: 100%;
+  z-index: 10;
+  text-align: center;
+  color: white;
+  background: linear-gradient(226.97deg, #D30000 2.73%, #D21436 100%);
+  border-radius: 3px;
+  line-height: 50px;
+  letter-spacing: 0px;
 }
 
 .search {
