--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -115,7 +115,7 @@
     </div>
   </div>
 
-  <div class="le-vrai-pouvoir-all-container">
+  <!-- <div class="le-vrai-pouvoir-all-container">
     <h3>Le véritable pouvoir des arbres</h3>
     <div class="le-vrai-pouvoir-div-container">
       <div class="le-vrai-pouvoir-div">
@@ -135,7 +135,7 @@
         <p>Ses racines permettent de filtrer l'eau et ainsi obtenir une meilleure qualité de l'eau. Sa présence réduit le volume des eaux de ruissellement, protège les sources d'eau et réduit les dommages causés par les inondations.</p>
       </div>
     </div>
-  </div>
+  </div> -->
 </div>
 
 
