--- a/app/assets/stylesheets/components/_search-tooltips.scss
+++ b/app/assets/stylesheets/components/_search-tooltips.scss
@@ -6,9 +6,11 @@
 		box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.35);
 		border-radius: 8px;
 		max-width: none;
-		width: 375px;
+		width: 400px;
 		text-align: justify;
 		padding: 4px 21px;
+		line-height: 150%;
+		padding-bottom: 12px;
 	}
 
 	.tooltip.in{
@@ -25,6 +27,8 @@
 		div {
 			display: flex;
 			justify-content: space-between;
+			align-items: center;
+			margin: 7px 0px;
 		}
 
 		img {
@@ -42,23 +46,21 @@
     justify-content: space-between;
 }
 
-.search-button-style-title {
-	line-height: 42px;
+.search-tooltip-separation-line {
+	height: 1px;
+    background-color: #b9b7b7;
+    width: 80%;
+    margin: 15px auto !important;
 }
 
-.search-button-style {
+.search-tooltip-text {
 	background-color: #00C896;
     color: white;
     font-family: carme;
-    padding: 10px;
+    padding: 10px 0px;
     border-radius: 4px;
-}
-
-   
-.search-tooltip-separation-line {
-	height: 0.5px;
-    background-color: #b9b7b7;
-    margin-bottom: 12.5px;
+    text-align: center;
+    width: 70px;
 }
 
 .search-tooltip-repartition-text {
