--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -67,20 +67,20 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-formulaire-title">
-          <p>Nous avons besoin de toi pour avancer<i data-dismiss="modal" class="fas fa-times cross-closing-modal"></i></p>
+          <p>Nous avons besoin de vous pour avancer<i data-dismiss="modal" class="fas fa-times cross-closing-modal"></i></p>
       </div>
       <div class="modal-body">   
         <%= form_tag questions_path, :class => 'formulaire-participation' do %>
       
           <div>
-            <p>Qu'est ce qui t'as paru le moins clair ?</p>
+            <p>Que modifieriez-vous pour améliorer le site ou le concept de skytree'p?</p>
             <%= text_area_tag :reponse, params[:reponse] %>
           </div>
           
 
           <div>
-            <p class="text-for-mail">Rejoins une communauté engagée et fais partie de l'aventure vers un transport éco-responsable (optionnel)</p>
-            <%= text_field_tag :email, params[:email], placeholder: 'marie.lami@skytreep.fr' %>
+            <p class="text-for-mail">Rejoignez une communauté engagée et faites partie de l'aventure vers un transport éco-responsable (optionnel)</p>
+            <%= text_field_tag :email, params[:email], placeholder: 'marie.lami@hotmail.fr' %>
           </div>
           
 
