--- a/app/javascript/components/compensation/cadre/slider/compensation-slider.css
+++ b/app/javascript/components/compensation/cadre/slider/compensation-slider.css
@@ -1,7 +1,8 @@
 #slider__compensation {  
 	width: 650px;
-	margin: auto;
+	margin: auto 0px;
 	background-color: #E8EEF2;
+    position: relative;
 }
 
 .slider__compensation__container {
