--- a/app/views/compensations/new.html.erb
+++ b/app/views/compensations/new.html.erb
@@ -27,7 +27,7 @@
 			data-description="Voyage à Bruxelles"
 			data-currency="EUR">
 		</script>
-		<button type="submit" id="stripe-trigger-payment" class="checkout__button">Payer ma dette écologique</button>
+		<button type="submit" id="stripe-trigger-payment" class="pay__my__compensation">Payer ma dette écologique</button>
 	<% end %>
 </div>
 
