--- a/app/assets/stylesheets/components/_compensation.scss
+++ b/app/assets/stylesheets/components/_compensation.scss
@@ -9,26 +9,46 @@
 
 .compensation__stats__container {
     background-color: #FBFAEB;
-    width: 850px;
-    height: 350px;
+    width: 875px;
+    height: 375px;
 	border-radius: 3px;
 	margin: 30px;
-	display: flex;
+    margin-top: 50px;
+}
+
+.compensation__parts__container {
+    min-height: 290px;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin-top: 50px;
 }
 
 
 .compensation__first__part {
-	display: flex;
+    
+    width: 310px;
+    margin: 0px auto;
+    margin-top: 20px;
+    height: 115px;
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    height: 70px;
+
+    h4 {
+        text-align: center;
+        font-family: alegreya sans SC;
+        color: white;
+        font-weight: bold;
+        background-color: #36ACB8;
+        padding: 15px;
+        margin: 0px;
+        border-radius: 3px;
+    }
 }
 
 .compensation__second__part {
 	display: flex;
-    justify-content: center;
+    justify-content: space-around;
     height: 100px;
     align-items: center;
 }
@@ -63,6 +83,10 @@
 .compensation__icons {
     
     display: flex;
+    justify-content: space-between;
+    width: 310px;
+    margin-top: 10px;
+    padding: 0px;
 
 	li {
 	  font-size: 25px;
@@ -89,8 +113,6 @@
 
 #active__measure {
 	background-color: #36ACB8;
-	border-left: solid 1px;
-	border-right: solid 1px;
 }
 
 
@@ -138,21 +160,6 @@
     height: 100%;
 }
 
-
-.position__upper {
-    position: absolute;
-    right: -90px;
-    bottom: -4px;
-    font-size: 16px;
-}
-
-.position__lower {
-    position: absolute;
-    left: -52px;
-    bottom: -2px;
-    font-size: 16px;
-}
-
 .position__square {
     width: 9px;
     height: 30px;
@@ -164,34 +171,6 @@
     left: -3px;
 }
 
-
-.participation__treep {
-    position: absolute;
-    border: 3px solid;
-    width: 18%;
-    height: 20px;
-    top: 56px;
-    left: 5px;
-    border-bottom: none;
-
-    p {
-      text-align: center;
-    }
-}
-
-.participation__user {
-    position: absolute;
-    border: 3px solid;
-    width: 75%;
-    height: 20px;
-    top: 56px;
-    right: 4px;
-    border-bottom: none;
-
-    p {
-      text-align: center;
-    }
-}
 
 .end__square {
     width: 9px;
@@ -221,13 +200,25 @@
     justify-content: center;
 }
 
-#stripe-trigger-payment {
-    width: 100%;
+.pay__my__compensation {
+  background-color: #00C896;
+  text-align: center;
+  font-family: alegreya sans SC;
+  color: white;
+  font-weight: bold;
+  padding: 15px;
+  margin: 0px;
+  border-radius: 3px;
+  font-size: 23px;
+  width: 310px;
+  border: none;
 
-    &:hover {
+  &:hover {
         background-color: #2DE1B4;
-    }
+  }
 }
+
+
 
 #title-target {
     min-height: 80vh;
@@ -386,3 +377,80 @@
         font-size: 30px;
     }
 }
+
+
+.compensation__display__data {
+    position: absolute;
+    display: flex;
+    top: -60px;
+    width: 100%;
+
+    div {
+        display: flex;
+        justify-content: center;
+    }
+
+    p {
+        padding: 6px;
+        color: white;
+        background-color: $green;
+        font-size: 17px;
+        border-radius: 3px;
+        position: relative;
+        height: 35px;
+
+        img {
+            position: absolute;
+            top: -12px;
+            right: -48px;
+        }
+    }
+}
+
+
+.compensation__slider__debut__fin {
+    display: flex;
+    align-items: center;
+
+    p {
+        padding: 6px;
+        color: white;
+        background-color: #255156;
+        font-size: 17px;
+        border-radius: 3px;
+        height: 35px;
+    }
+
+    img {
+        position: absolute;
+        bottom: 6px;
+    }
+}
+
+.tree__adjustement {
+    position: relative;
+    height: 45px;
+    width: 45px;
+}
+
+.compensation__repartition__dette {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    top: 50px;
+    font-size: 17px;
+
+    p {
+        text-align: center;
+        border: solid 3px;
+        height: 25px;
+        border-bottom: none;
+        padding-top: 20px;
+    }
+}
+
+
+
+
+
