--- a/app/javascript/components/suggestion.css
+++ b/app/javascript/components/suggestion.css
@@ -3,17 +3,22 @@
   border: none;
   border-radius: 4px;
   overflow: scroll;
+  display: block;
+}
+
+.icon-ville {
+  height: 38px;
 }
 
 .tour-de-control {
-	height: 30px;
+	height: 29px;
 	margin-right: 6px;
 }
 
 .line-suggestion {
 	display: flex;
     align-items: center;
-    padding-left: 4px;
+    padding-left: 42px;
     height: 50px;
 }
 
