--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,17 @@
 <%= render "shared/navbar" %>
-<div style="width: 400px;margin: 80px auto;">
-  <h2>Sign up</h2>
+<div class="devise__interface__container">
+  <h2 style="text-align: center;">Inscription</h2>
+
+
+  <%= link_to  user_facebook_omniauth_authorize_path, class: "facebook__connection" do %>
+    <div><i class="fab fa-facebook-square"></i><p>S'inscrire avec facebook</p></div>
+  <% end %>
+
+  <div class="login__separation__container">
+      <div></div>
+      <h4>ou</h4>
+      <div></div>
+  </div>
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= f.error_notification %>
@@ -11,16 +22,18 @@
                   autofocus: true ,
                   input_html: { autocomplete: "email" }%>
       <%= f.input :password,
+                  label: "Mot de passe",
                   required: true,
-                  hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
+                  hint: ("#{@minimum_password_length} signes minimum" if @minimum_password_length),
                   input_html: { autocomplete: "new-password" } %>
       <%= f.input :password_confirmation,
+                  label: "Confirmation du mot de passe",
                   required: true,
                   input_html: { autocomplete: "new-password" } %>
     </div>
 
-    <div class="form-actions">
-      <%= f.button :submit, "Sign up" %>
+    <div class="interface__submit">
+      <button type="submit">S'inscrire</button>
     </div>
   <% end %>
 
