--- a/app/assets/stylesheets/components/_facebook-omni.scss
+++ b/app/assets/stylesheets/components/_facebook-omni.scss
@@ -77,7 +77,14 @@
 	justify-content: space-between;
 }
 
+.name__input {
+	display: flex;
+	justify-content: space-between;
 
+	div {
+		width: 45%;
+	}
+}
 
 
 
