--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,11 +1,34 @@
 <%= render "shared/navbar" %>
 <div class="devise__interface__container">
-  <h2 style="text-align: center;">Inscription</h2>
+  <h2 style="text-align: center;margin-bottom: 25px;">Inscription</h2>
+
+  <%= link_to  user_facebook_omniauth_authorize_path, class: "facebook__connection" do %>
+    <div><i class="fab fa-facebook-square"></i><p>S'inscrire avec facebook</p></div>
+  <% end %>
+
+  <div class="login__separation__container">
+      <div></div>
+      <h4>ou</h4>
+      <div></div>
+  </div>
+
 
   <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
     <%= f.error_notification %>
 
     <div class="form-inputs">
+      <div class="name__input">
+        <%= f.input :first_name,
+                    label: "Prénom",
+                    required: true,
+                    autofocus: true ,
+                    input_html: { autocomplete: "first-name", class: "smaller__inputs" }%>
+        <%= f.input :last_name,
+                    label: "Nom",
+                    required: true,
+                    autofocus: true ,
+                    input_html: { autocomplete: "last-name", class: "smaller__inputs" }%>
+      </div>        
       <%= f.input :email,
                   required: true,
                   autofocus: true ,
