Updated packages & solved pundit authorization

--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -50,7 +50,7 @@
         </div>
         <div class="dashboard-stat info-compensation">
           <div class="thermomether-straight"></div>
-          <p><%= @user.trees * 20 %> kg de C02 compensé</p>
+          <p><%= @trees_kilo %> kg de C02 compensé</p>
         </div>
         <div class="dashboard-stat info-km-parcourus">
           <div class="thermomether-straight"></div>
