--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -1,20 +1,9 @@
 // Import Google fonts
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
-@import url("https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:300,500,700");
-@import url("https://fonts.googleapis.com/css?family=Carme");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700");
+@import url("https://fonts.googleapis.com/css?family=Share:400,700");
+
 // Define fonts for body and headers
-$body-font: "Carme", "sans-serif";
-$headers-font: "Raleway", "Helvetica", "sans-serif";
-$sub-headers-font: "Alegreya Sans SC", "Helvetica", "sans-serif";
+$body-font: "Open Sans", "sans-serif";
+$headers-font: "Share", "sans-serif";
 
-
-// To use a font file (.woff) uncomment following lines
-// @font-face {
-//   font-family: "Font Name";
-//   src: font-url('FontFile.eot');
-//   src: font-url('FontFile.eot?#iefix') format('embedded-opentype'),
-//        font-url('FontFile.woff') format('woff'),
-//        font-url('FontFile.ttf') format('truetype')
-// }
-// $my-font: "Font Name";
 
