Updated everything, ready for deployment

--- a/app/assets/stylesheets/components/_details.scss
+++ b/app/assets/stylesheets/components/_details.scss
@@ -159,7 +159,7 @@
 .details__stats__text {
   background-color: #00C896;
   color: white;
-  font-family: carme;
+  font-family: $body-font;
   padding: 10px;
   border-radius: 4px;
   text-align: center;
