--- a/app/javascript/components/home__sliders.css
+++ b/app/javascript/components/home__sliders.css
@@ -15,8 +15,8 @@
     background: none;
     left: -1px;
     top: -33px;
-    font-size: 23px;
-    font-family: Alegreya Sans SC;
+    font-size: 21px;
+    font-family: "Open Sans", "sans-serif";
     font-weight: bold;
 }
 
@@ -49,8 +49,8 @@
     left: -5px;
     top: -33px;
     letter-spacing: 2px;
-    font-size: 23px;
-    font-family: Alegreya Sans SC;
+    font-size: 21px;
+    font-family: "Open Sans", "sans-serif";
     font-weight: bold;
 }
 
