--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -79,7 +79,7 @@
       <div class="container">
         <div class="row">
             <% @flights.each do |flight| %>   
-            <div><%= flight.inspect %></div>    
+            <!-- <div><%= flight.inspect %></div> -->    
             <div class=" col-3 voyage-card-container">
                 <div class="voyage-card-subsection upper">
                   <div class="dashboard-card-layer">
