--- a/app/assets/stylesheets/components/_compensation.scss
+++ b/app/assets/stylesheets/components/_compensation.scss
@@ -36,7 +36,7 @@
 
     h4 {
         text-align: center;
-        font-family: alegreya sans SC;
+        font-family: $body-font;
         color: white;
         font-weight: bold;
         background-color: #36ACB8;
@@ -203,7 +203,7 @@
 .pay__my__compensation {
   background-color: #00C896;
   text-align: center;
-  font-family: alegreya sans SC;
+  font-family: $body-font;
   color: white;
   font-weight: bold;
   padding: 15px;
@@ -229,7 +229,7 @@
     background-color: rgba(4, 4, 9, 0.7);
 
     h4 {      
-        font-family: Alegreya Sans SC;
+        font-family: $body-font;
         font-style: normal;
         font-weight: bold;
         color: white;
@@ -252,7 +252,7 @@
     h4 {
         color: white;
         margin: 0px;
-        font-family: Alegreya Sans SC;
+        font-family: $body-font;
     }
 }
 
@@ -270,7 +270,7 @@
         color: white;
         border: none;
         font-size: 23px;
-        font-family: Alegreya Sans SC;
+        font-family: $body-font;
         font-weight: bold;
 
         &:hover {
@@ -306,7 +306,7 @@
         box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.35);
         border-radius: 4px;
         text-align: center;
-        font-family: carme;
+        font-family: $body-font;
         font-weight: 400px;
         margin: 0px 7px 15px 7px;
     }
