--- a/app/assets/stylesheets/components/_nophone.scss
+++ b/app/assets/stylesheets/components/_nophone.scss
@@ -60,7 +60,7 @@
 
 .text1-no-phone {
   color: white;
-  font-family: carme;
+  font-family: $body-font;
   font-size: 20px;
   margin-top: -100px;
   text-align: center;
