--- a/app/assets/stylesheets/components/_search-tooltips.scss
+++ b/app/assets/stylesheets/components/_search-tooltips.scss
@@ -56,7 +56,7 @@
 .search-tooltip-text {
 	background-color: #00C896;
     color: white;
-    font-family: carme;
+    font-family: $body-font;
     padding: 10px 0px;
     border-radius: 4px;
     text-align: center;
@@ -79,7 +79,7 @@
 	p {
 		padding: 8px;
     	color: white;
-    	font-family: carme;
+    	font-family: $body-font;
     	text-align: center;
     	width: 50%;
 	}
