--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -42,12 +42,14 @@
 
       <li class="li-before">
         <li><i class="fas fa-user-ninja"></i></li>
-        <li><% if user_signed_in? %>
-           <%= link_to 'Déconnection', destroy_user_session_path, method: :delete %>
-           <% else %>
-           <%= link_to 'Se connecter', new_user_session_path %>
-          <% end %>
-        </li>
+        <% if user_signed_in? %>
+        <!-- <li><%= link_to 'Déconnection', destroy_user_session_path, method: :delete %></li>
+        <li><i class="fas fa-user-alt"></i><li> -->
+        <li><%= link_to 'Dashboard', dashboard_path %></li>
+           
+        <% else %>
+           <li><%= link_to 'Se connecter', new_user_session_path %></li>
+        <% end %>
       </li>
 
       <li class="li-before">
