--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -14,12 +14,13 @@ body, html {
 
 .slogan h1 {
   font-family: 'Alegreya Sans SC', sans-serif;
-  font-weight: 300;
+  font-weight: 500;
   font-size: 48px;
   margin: 0px;
   color: white;
   padding-left: 13vw;
-  padding-top: 50px;
+  padding-top: 142px;
+  margin-bottom: 20px;
   /* text-shadow: .9px .9px grey; */
 }
 
