--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
     <div class="background-section1"></div>
 
     <div class="slogan">
-      <h1>Plantez des arbres <br> en réservant <br> vos billets d'avions<br></h1>
+      <h1>Comparez & réservez les trajets les moins polluants.</h1>
     </div>
 
     <div class="search__bar__container" id="search__bar__home__background">
